Create index of total

--- a/index.html
+++ b/index.html
@@ -5,8 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+
+    <!--CSS-->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="01WEBSTANDARD\web\index.html">click</a>
+    <div id="wrap">
+        <div id="header"></div>
+        <div id="side_left"></div>
+        <div id="content">
+            <!--The list of sites I've practied-->
+            <div class = "sites">
+                <ul>
+                    <li>
+                        <strong>01. 웹 표준 사이트 만들기</strong>
+                        <span class="real"><a href="01WEBSTANDARD\web\index.html">Site</a></span>
+                        <span class="git"><a href="https://github.com/hwahyeon/lecture_wb/tree/main/01WEBSTANDARD">Code</a></span>
+                    </li>
+                    <li>
+                        <strong>02. 반응형 사이트 만들기</strong>
+                        <span class="real"><a href="#">Site</a></span>
+                        <span class="git"><a href="#">Code</a></span>
+                    </li>
+                    <li>
+                        <strong>03. 메가박스 사이트 만들기</strong>
+                        <span class="real"><a href="#">Site</a></span>
+                        <span class="git"><a href="#">Code</a></span>
+                    </li>
+                    <li>
+                        <strong>04. 모바일 사이트 만들기</strong>
+                        <span class="real"><a href="#">Site</a></span>
+                        <span class="git"><a href="#">Code</a></span>
+                    </li>
+                    <li>
+                        <strong>05. 패럴럭스 사이트 만들기</strong>
+                        <span class="real"><a href="#">Site</a></span>
+                        <span class="git"><a href="#">Code</a></span>
+                    </li>
+                </ul>    
+            </div>
+            <!--//The list of sites I've practied-->
+
+            <!--The list of effects I've practied-->
+            <div class="effects">
+                Mouse Effect / JavaScript<br>
+            </div>
+            <!--//The list of effects I've practied-->
+
+
+        </div>
+        <div id="side_right"></div>
+        <div id="footer"></div>
+    </div>
 </body>
 </html>
