--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                     </li>
                     <li>
                         <strong>02. 반응형 사이트 만들기</strong>
-                        <span class="real"><a href="#">Site</a></span>
+                        <span class="real"><a href="02RESPONSIVE">Site</a></span>
                         <span class="git"><a href="#">Code</a></span>
                     </li>
                     <li>
                         <strong>03. 메가박스 사이트 만들기</strong>
-                        <span class="real"><a href="#">Site</a></span>
+                        <span class="real"><a href="03MEGABOX">Site</a></span>
                         <span class="git"><a href="#">Code</a></span>
                     </li>
                     <li>
@@ -39,7 +39,7 @@
                     </li>
                     <li>
                         <strong>05. 패럴럭스 사이트 만들기</strong>
-                        <span class="real"><a href="#">Site</a></span>
+                        <span class="real"><a href="05PARALLAX">Site</a></span>
                         <span class="git"><a href="#">Code</a></span>
                     </li>
                 </ul>    
