Create two Boards

--- a/01WEBSTANDARD/web/index.html
+++ b/01WEBSTANDARD/web/index.html
@@ -249,19 +249,19 @@
                                 <ul>
                                     <li>
                                         <a href="#">
-                                            <span><img src="img/sban04.jpg" alt="이미지3"><em>바로가기</em></span>
+                                            <span><img src="img/sban04.jpg" alt="이미지4"><em>바로가기</em></span>
                                             <strong>HTML</strong>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <span><img src="img/sban05.jpg" alt="이미지4"><em>바로가기</em></span>
+                                            <span><img src="img/sban05.jpg" alt="이미지5"><em>바로가기</em></span>
                                             <strong>CSS</strong>
                                         </a>
                                     </li>
                                     <li class="last">
                                         <a href="#">
-                                            <span><img src="img/sban06.jpg" alt="이미지5"><em>바로가기</em></span>
+                                            <span><img src="img/sban06.jpg" alt="이미지6"><em>바로가기</em></span>
                                             <strong>JQuery</strong>
                                         </a>
                                     </li>
@@ -278,9 +278,9 @@
                                 <ul>
                                     <li class="active"><a href="#"> 공지사항1</a>
                                         <ul>
-                                            <li><a href="#">첫 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
-                                            <li><a href="#">첫 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
-                                            <li><a href="#">첫 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">첫 번째 공지사항 탭 메뉴 테스트 목록입니다. 첫 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">첫 번째 공지사항 탭 메뉴 테스트 목록입니다. 첫 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">첫 번째 공지사항 탭 메뉴 테스트 목록입니다. 첫 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="#"> 공지사항2</a>
@@ -300,6 +300,17 @@
                                 </ul>
                             </div>
                             <!-- //탭메뉴 -->
+                            <!-- 게시판4 -->
+                            <div class="notice4 mt15">
+                                <h4>최신 <em>공지사항</em></h4>
+                                <ul>
+                                    <li><a href="#">웹 디자이너와 웹 퍼블리셔의 차이점은 무엇인가요?</a><span>2018.11.19</span></li>
+                                    <li><a href="#">웹 디자이너와 웹 퍼블리셔의 차이점은 무엇인가요?</a><span>2018.11.19</span></li>
+                                    <li><a href="#">웹 디자이너와 웹 퍼블리셔의 차이점은 무엇인가요?</a><span>2018.11.19</span></li>
+                                </ul>
+                                <a href="#" class="more" title="더보기">더보기</a>
+                            </div>
+                            <!-- //게시판4 -->
                         </div>
                             <!--col5-->
                         <div class="column col6">
