--- a/01WEBSTANDARD/web/index.html
+++ b/01WEBSTANDARD/web/index.html
@@ -406,10 +406,18 @@
                         <li><a href="#">게시중단요청 서비스</a></li>
                         <li><a href="#">고객센터</a></li>
                     </ul>
+                    <address>
+                        Copyright&copy;hwahyeon All Right Reserved.
+                    </address>
+                    <div class="w3c">
+                        <a href="http://validator.w3.org/check?uri=referer">
+                            <img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" />
+                        </a>
+                        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                            <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="올바른 CSS입니다!" />
+                        </a>
+                    </div>
                 </div>
-                <address>
-                    Copyright&copy;hwahyeon All Right Reserved.
-                </address>
             </div>
         </div>
         <!-- //footer -->
