--- a/02RESPONSIVE/05.layout.html
+++ b/02RESPONSIVE/05.layout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout 05</title>
     <style>
-        8 {margin: 0; padding: 0;}
+        * {margin: 0; padding: 0;}
         #wrap {width: 1200px; margin: 0 auto;}
         body {background-color: #e3f2fd;}
         .header {width: 100%; height: 100px; background: #81d4fa;}
