--- a/02RESPONSIVE/web/index.html
+++ b/02RESPONSIVE/web/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="webstoryboy">
+    <meta name="author" content="hwahyeon">
     <meta name="description" content="반응형 사이트 따라하기">
-    <meta name="keywords" content="반응형사이트, 웹퍼블리셔, 웹접근성, HTML5, webstoryboy, webs">
-    <title>반응형 사이트 만들기 : 문서 셋팅</title>
+    <meta name="keywords" content="반응형사이트, 웹퍼블리셔, 웹접근성, HTML5, webs">
+    <title>반응형 사이트 만들기 : 아웃라이너</title>
 
     <!-- style -->
     <link rel="stylesheet" href="css/reset.css">
@@ -30,7 +30,41 @@
     <![endif]-->
 </head>
 <body>
-    
+    <header>
+        <h1>반응형 사이트</h1>
+    </header>
+    <nav>
+        <h2>반응형 사이트 전체 메뉴</h2>
+    </nav>
+    <article>
+        <h2>반응형 사이트 서브 타이틀</h2>
+    </article>
+    <main>
+        <section>
+            <h2>반응형 사이트 컨텐츠</h2>
+            <section>
+                <h3>반응형 사이트 왼쪽 컨텐츠</h3>
+                <article><h4>반응형 사이트 왼쪽 컨텐츠1</h4></article>
+                <article><h4>반응형 사이트 왼쪽 컨텐츠2</h4></article>
+                <article><h4>반응형 사이트 왼쪽 컨텐츠3</h4></article>
+            </section>
+            <section>
+                <h3>반응형 사이트 가운데 컨텐츠</h3>
+                <article><h4>반응형 사이트 가운데 컨텐츠1</h4></article>
+                <article><h4>반응형 사이트 가운데 컨텐츠2</h4></article>
+                <article><h4>반응형 사이트 가운데 컨텐츠3</h4></article>
+            </section>
+            <section>
+                <h3>반응형 사이트 오른쪽 컨텐츠</h3>
+                <article><h4>반응형 사이트 오른쪽 컨텐츠1</h4></article>
+                <article><h4>반응형 사이트 오른쪽 컨텐츠2</h4></article>
+                <article><h4>반응형 사이트 오른쪽 컨텐츠3</h4></article>
+            </section>
+        </section>
+    </main>
+    <footer>
+        <h2>반응형 사이트 푸터</h2>
+    </footer>
 
 
     <!-- JavaScript Libraries -->
