--- a/02RESPONSIVE/web/index.html
+++ b/02RESPONSIVE/web/index.html
@@ -5,14 +5,14 @@
     <meta name="author" content="hwahyeon">
     <meta name="description" content="반응형 사이트 따라하기">
     <meta name="keywords" content="반응형사이트, 웹퍼블리셔, 웹접근성, HTML5, webs">
-    <title>반응형 사이트 만들기 : 아웃라이너</title>
+    <title>반응형 사이트 만들기</title>
 
     <!-- style -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 
     <!-- 파비콘 -->
-    <link rel="shortcut icon" href="icon/favicon.ico">
+    <link rel="shortcut icon" href="icon/favicon-152.png">
     <link rel="apple-touch-icon-precomposed" href="icon/favicon-152.png">
     <link rel="icon" href="path/to/favicon.png">
     <link rel="icon" href="icon/favicon-16.png" sizes="16x16"> 
@@ -30,9 +30,16 @@
     <![endif]-->
 </head>
 <body>
-    <header>
-        <h1>반응형 사이트</h1>
+    <!-- header -->
+    <header id="header">
+        <div class="header_menu">
+            <a href="#">Blog</a>
+            <a href="#">Github</a>
+            <a href="#">webstandard</a>
+        </div>
     </header>
+    <!-- //header -->
+
     <nav>
         <h2>반응형 사이트 전체 메뉴</h2>
     </nav>
